dark mode bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,12 +77,12 @@
   --spacing-margin-y-mobile: var(--margin-section-y-mobile);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--color-black);
